// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

// Define Enums for clarity and data integrity
enum rule_enum {
  ALL    // Every assignee must submit a POSITIVE response
  ANY    // Any single assignee submits a POSITIVE response
  K_OF_N // K positive responses are required
}

enum response_enum {
  POSITIVE
  NEGATIVE
}

enum workflow_status_enum {
  IN_PROGRESS
  COMPLETED
  CANCELED
}

enum history_event_enum {
  WORKFLOW_STARTED
  STEP_ADVANCED
  STEP_SENT_BACK
  WORKFLOW_COMPLETED
}

// --- Tables ---

// Table to store user information
model users {
  id         Int      @id @default(autoincrement())
  name       String   
  email      String   @unique
  created_at DateTime @default(now())
  updated_at DateTime @default(now()) @updatedAt

  // Relations
  template_step_assignees template_step_assignees[]
  responses               responses[]
  workflow_assignees      workflow_assignees[]
}

// Main table to define Workflow Templates
model workflow_templates {
  id         Int      @id @default(autoincrement())
  name       String   
  description String? 
  created_at DateTime @default(now())
  updated_at DateTime @default(now()) @updatedAt

  // Relations
  versions workflow_template_versions[]
}

// **New Table:** workflow_template_versions
// To version the definition of the steps for a template.
model workflow_template_versions {
  id                 Int      @id @default(autoincrement())
  workflow_template_id Int
  version_number     Int      @default(1)
  is_active          Boolean  @default(true)
  created_at         DateTime @default(now())

  // Relations
  workflow_template workflow_templates @relation(fields: [workflow_template_id], references: [id])
  template_steps    template_steps[]
  workflows         workflows[]

  @@unique([workflow_template_id, version_number])
}

// Defines the Ordered Steps for a specific Workflow Template **Version**
model template_steps {
  id                          Int      @id @default(autoincrement())
  workflow_template_version_id Int
  step_name                   String   
  step_order                  Int
  metadata                    Json?
  completion_rule_type        rule_enum
  k_value                     Int?
  created_at                  DateTime @default(now())
  updated_at                  DateTime @default(now()) @updatedAt

  // Relations
  workflow_template_version workflow_template_versions @relation(fields: [workflow_template_version_id], references: [id])
  template_step_assignees   template_step_assignees[]
  responses                 responses[]
  workflow_assignees        workflow_assignees[]
  history                   history[]

  @@unique([workflow_template_version_id, step_order])
}

// Defines the allowed Assignee Roles/Groups for a Step in a Template **Version**
model template_step_assignees {
  template_step_id Int
  user_id          Int
  created_at       DateTime @default(now())

  // Relations
  template_step template_steps @relation(fields: [template_step_id], references: [id])
  user          users          @relation(fields: [user_id], references: [id])

  @@id([template_step_id, user_id])
}

// Instances of workflows being executed
model workflows {
  id                          Int      @id @default(autoincrement())
  workflow_template_version_id Int
  current_step_order          Int      @default(1)
  status                      workflow_status_enum
  started_at                  DateTime @default(now())
  completed_at                DateTime?
  created_at                  DateTime @default(now())
  updated_at                  DateTime @default(now()) @updatedAt

  // Relations
  workflow_template_version workflow_template_versions @relation(fields: [workflow_template_version_id], references: [id])
  responses                 responses[]
  workflow_assignees        workflow_assignees[]
  history                   history[]
}

// Table for responses to workflow steps
model responses {
  id               Int      @id @default(autoincrement())
  workflow_id      Int
  template_step_id Int
  revision_number  Int      @default(1) // **NEW COLUMN**
  responder_id     Int
  response_type    response_enum
  description      String?  
  created_at       DateTime @default(now())

  // Relations
  workflow    workflows   @relation(fields: [workflow_id], references: [id])
  template_step template_steps @relation(fields: [template_step_id], references: [id])
  responder   users       @relation(fields: [responder_id], references: [id])
  history     history[]
  attachments response_attachments[]

  @@unique([workflow_id, template_step_id, revision_number])
}

// Tracks the Specific Assignees for an Active Workflow Instance and its Current Step
model workflow_assignees {
  workflow_id      Int
  template_step_id Int
  assignee_user_id Int
  created_at       DateTime @default(now())

  // Relations
  workflow      workflows   @relation(fields: [workflow_id], references: [id])
  template_step template_steps @relation(fields: [template_step_id], references: [id])
  assignee      users       @relation(fields: [assignee_user_id], references: [id])

  @@id([workflow_id, template_step_id, assignee_user_id])
  @@index([workflow_id, template_step_id]) // Index for common lookups
}

// Table to log history of state changes
model history {
  id                       Int      @id @default(autoincrement())
  workflow_id              Int
  template_step_id         Int
  next_step_order          Int?
  event_type               history_event_enum
  triggered_by_response_id Int?
  created_at               DateTime @default(now())

  // Relations
  workflow    workflows   @relation(fields: [workflow_id], references: [id])
  template_step template_steps @relation(fields: [template_step_id], references: [id])
  triggered_by_response responses? @relation(fields: [triggered_by_response_id], references: [id])
}

// Separate table for file attachments to responses
model response_attachments {
  id          Int      @id @default(autoincrement())
  response_id Int
  file_url    String   
  file_name   String?  
  created_at  DateTime @default(now())

  // Relations
  response responses @relation(fields: [response_id], references: [id])
}