// Define Enums for clarity and data integrity (Unchanged)
Enum rule_enum {
  ALL // Every assignee must submit a POSITIVE response
  ANY // Any single assignee submits a POSITIVE response
  K_OF_N // K positive responses are required
}

Enum response_enum {
  POSITIVE
  NEGATIVE
}

Enum workflow_status_enum {
  IN_PROGRESS
  COMPLETED
  CANCELED
}

Enum history_event_enum {
  WORKFLOW_STARTED
  STEP_ADVANCED
  STEP_SENT_BACK
  WORKFLOW_COMPLETED
}

// Table to store user information (unchanged, but good practice)
Table users {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [not null, unique]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// Main table to define Workflow Templates (Unchanged)
Table workflow_templates {
  id int [pk, increment]
  name varchar(255) [not null]
  description text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// 🆕 **New Table:** workflow_template_versions
// To version the definition of the steps for a template.
Table workflow_template_versions {
  id int [pk, increment]
  workflow_template_id int [not null, ref: > workflow_templates.id]
  version_number int [not null, default: 1] // Tracks the version
  is_active boolean [not null, default: true] // To denote the current draft/active version
  created_at timestamp [default: `now()`]

  indexes {
    (workflow_template_id, version_number) [unique]
  }
}

// Defines the Ordered Steps for a specific Workflow Template **Version**
// **CHANGE:** `workflow_template_id` replaced with `workflow_template_version_id`
Table template_steps {
  id int [pk, increment]
  workflow_template_version_id int [not null, ref: > workflow_template_versions.id]
  step_name varchar(255) [not null]
  step_order int [not null]
  metadata json
  completion_rule_type rule_enum [not null]
  k_value int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (workflow_template_version_id, step_order) [unique]
  }
}

// Defines the allowed Assignee Roles/Groups for a Step in a Template **Version**
// **CHANGE:** `template_step_id` now refers to the steps in the versioned table
Table template_step_assignees {
  template_step_id int [not null, ref: > template_steps.id]
  user_id int [not null, ref: > users.id]
  created_at timestamp [default: `now()`]

  indexes {
    (template_step_id, user_id) [pk]
  }
}

// Instances of workflows being executed
Table workflows {
  id int [pk, increment]
  // **CHANGE:** Reference changed to the specific version used to start the workflow
  workflow_template_version_id int [not null, ref: > workflow_template_versions.id]
  current_step_order int [not null, default: 1]
  status workflow_status_enum [not null]
  started_at timestamp [default: `now()`]
  completed_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// 🆕 **New Column:** `revision_number` added to track "v2", "v3", etc., for a step
Table responses {
  id int [pk, increment]
  workflow_id int [not null, ref: > workflows.id]
  template_step_id int [not null, ref: > template_steps.id]
  revision_number int [not null, default: 1] // **NEW COLUMN**
  responder_id int [not null, ref: > users.id]
  response_type response_enum [not null]
  description text
  created_at timestamp [default: `now()`]

  indexes {
    (workflow_id, template_step_id, revision_number) [unique] // Enforce uniqueness on the revision
  }
}

// Tracks the Specific Assignees for an Active Workflow Instance and its Current Step
// **CHANGE:** No direct change, but it now links to a step within a locked version.
Table workflow_assignees {
  workflow_id int [not null, ref: > workflows.id]
  template_step_id int [not null, ref: > template_steps.id]
  assignee_user_id int [not null, ref: > users.id]
  created_at timestamp [default: `now()`]

  indexes {
    (workflow_id, template_step_id, assignee_user_id) [pk]
    (workflow_id, template_step_id)
  }
}

// Table to log history of state changes (for debuggability)
// **CHANGE:** No direct change, but its response link now points to a versioned response.
Table history {
  id int [pk, increment]
  workflow_id int [not null, ref: > workflows.id]
  template_step_id int [not null, ref: > template_steps.id]
  next_step_order int
  event_type history_event_enum [not null]
  triggered_by_response_id int [ref: > responses.id]
  created_at timestamp [default: `now()`]
}

// Separate table for file attachments to responses (Unchanged)
Table response_attachments {
  id int [pk, increment]
  response_id int [not null, ref: > responses.id]
  file_url varchar(512) [not null]
  file_name varchar(255)
  created_at timestamp [default: `now()`]
}